--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon Backend/server.js"
+    "server": "nodemon Backend/server.js",
+    "start":"node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend " 
   },
   "type": "module",
   "keywords": [],
