--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon Backend/server.js",
-    "start":"node backend/server.js",
+    "start":"node Backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend " 
   },
   "type": "module",
